@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-02T16:07:39Z",
+  "timestamp" : "2023-09-03T08:08:01Z",
   "count_outdated" : 1335,
   "uniques_outdated" : 718,
-  "count" : 1346,
-  "uniques" : 725,
+  "count" : 1347,
+  "uniques" : 726,
   "clones" : [
     {
       "timestamp": "2023-08-20T00:00:00Z",
@@ -64,6 +64,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
