@@ -1,5 +1,5 @@
 {
-  "count": 11,
+  "count": 12,
   "uniques": 2,
   "clones": [
     {
@@ -35,6 +35,11 @@
     {
       "timestamp": "2023-09-02T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-09-03T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
